Prevent link from wrapping

--- a/app/webpacker/styles/application.scss
+++ b/app/webpacker/styles/application.scss
@@ -49,3 +49,7 @@ $govuk-image-url-function: frontend-image-url;
 .bold-label {
   font-weight: 700;
 }
+
+.app-govuk-link {
+  white-space: nowrap;
+}
